--- a/css_basic/style.css
+++ b/css_basic/style.css
@@ -1,10 +1,12 @@
-body{
+body {
     display: flex;
     flex-direction: column;
     color:aquamarine;
     border: 0caps solid black;
+    background-color: rgb(78, 51, 199);
 }
 main {
+    background-color: blue;
     display: flex;
     flex-direction: row;
     flex:auto;
