--- a/headphones/8-styles.css
+++ b/headphones/8-styles.css
@@ -119,6 +119,12 @@ body {
     z-index: 1000;
     /* make sure it's above everything */
   }
+  .hamburger span {
+  width: 25px;
+  height: 3px;
+  border-radius: 3px;
+  transition: 0.3s;
+  }
 
   .logo {
     margin-left: 50px;
@@ -128,10 +134,10 @@ body {
   .list {
     display: none;
     flex-direction: column;
-    background-color: #071629;
+    background-color: #d4dfec;
     width: 100%;
     position: absolute;
-    top: 60px;
+    top: 70px;
     /* menu drops below hamburger */
     left: 0;
     text-align: center;
