--- a/headphones/7-styles.css
+++ b/headphones/7-styles.css
@@ -47,6 +47,17 @@ body {
 .list ul li:hover {
   color: red;
 }
+.nav-list {
+  color: white;
+}
+.nav-item {
+  cursor: pointer;
+  color: white;
+}
+.nav-link {
+  text-decoration: none;
+  color: white;
+}
 
 .section-1 {
   display: flex;
